# tic-tac-toe

./: .gitignore  README.md  main.py  pyproject.toml  run_tests.bat  tictactoe.py  utils.py
tests/: pytest.ini  test_tictactoe.py
tictac/: __main__.py  tictactoe.py
