[tool.poetry]
name = "tic-tac-toe"
version = "0.1.0"
description = ""
authors = ["denis sergeevich pekshev <pekshev.ds@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.linters.dependencies]
mypy = "^1.11.2"


[tool.poetry.group.testers.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
enable_incomplete_feature = ["NewGenericSyntax"]

[tool.pytest.ini_options]
# addopts = "--cov=books --cov-report=html --cov-branch --cov-fail-under=60 ."
# addopts = "--cov=books --cov-report=html --cov-fail-under=60 ."
# addopts = "--cov=books --cov-fail-under=60 ."
# addopts = "--cov=books ./books/tests/tests_utils.py"
# addopts = "--cov=books --cov-report=html --cov-branch --cov-fail-under=60 ./books/tests/tests_models.py"
# addopts = "--cov=books books/tests/tests_models.py"
addopts = "--cov=tictac --cov-report=term-missing:skip-covered --cov-report=xml:coverage.xml --cov-branch --cov-fail-under=50"
